--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -11,36 +11,63 @@ jobs:
     runs-on: windows-latest
 
     steps:
+      # 1. Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # 2. Setup MSBuild
       - name: Setup MSBuild
         uses: microsoft/setup-msbuild@v1.1
 
+      # 3. Find .csproj file automatically
       - name: Find project file
         id: find-project
         run: |
           $projectFile = Get-ChildItem -Recurse -Filter "*.csproj" | Select-Object -First 1 -ExpandProperty FullName
+          if (-not $projectFile) { Write-Error "No .csproj found!" ; exit 1 }
           $projectName = [System.IO.Path]::GetFileNameWithoutExtension($projectFile)
           echo "project_file=$projectFile" >> $env:GITHUB_OUTPUT
           echo "project_name=$projectName" >> $env:GITHUB_OUTPUT
 
+      # 4. Build the project in Release mode
       - name: Build project
         run: msbuild "${{ steps.find-project.outputs.project_file }}" /p:Configuration=Release /restore
 
+      # 5. Create ZIP of the DLL
       - name: Create ZIP
         run: |
-          $dllPath = Join-Path (Split-Path "${{ steps.find-project.outputs.project_file }}" -Parent) "bin\Release\net472\${{ steps.find-project.outputs.project_name }}.dll"
-          $zipPath = Join-Path (Split-Path $dllPath -Parent) "${{ steps.find-project.outputs.project_name }}-${{ github.ref_name }}.zip"
+          $projectDir = Split-Path "${{ steps.find-project.outputs.project_file }}" -Parent
+          $dllPath = Join-Path $projectDir "bin\Release\net472\${{ steps.find-project.outputs.project_name }}.dll"
+          if (-not (Test-Path $dllPath)) { Write-Error "DLL not found at $dllPath"; exit 1 }
+          $zipPath = Join-Path $projectDir "${{ steps.find-project.outputs.project_name }}-${{ github.ref_name }}.zip"
           Write-Host "Zipping $dllPath to $zipPath"
           Compress-Archive -Path $dllPath -DestinationPath $zipPath
 
+      # 6. Extract release notes from CHANGELOG.md
+      - name: Extract release notes from CHANGELOG
+        id: changelog
+        run: |
+          if (-not (Test-Path CHANGELOG.md)) { Write-Error "CHANGELOG.md not found!"; exit 1 }
+          $version = "${GITHUB_REF_NAME}"
+          $lines = Get-Content CHANGELOG.md
+          $inSection = $false
+          $notes = @()
+          foreach ($line in $lines) {
+              if ($line -match "## \[$version\]") { $inSection = $true; continue }
+              if ($line -match "## \[") { $inSection = $false }
+              if ($inSection) { $notes += $line }
+          }
+          if (-not $notes) { Write-Warning "No changelog section found for $version"; $notes = @("No release notes available.") }
+          $releaseNotes = $notes -join "`n"
+          echo "body=$releaseNotes" >> $env:GITHUB_OUTPUT
+
+      # 7. Create GitHub Release
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ github.ref_name }}
           name: Release ${{ github.ref_name }}
-          body: Automated release
+          body: ${{ steps.changelog.outputs.body }}
           files: ${{ steps.find-project.outputs.project_name }}/bin/Release/net472/${{ steps.find-project.outputs.project_name }}-${{ github.ref_name }}.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
