--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -43,7 +43,7 @@ jobs:
           Write-Host "Zipping $dllPath to $zipPath"
           Compress-Archive -Path $dllPath -DestinationPath $zipPath
 
-      # 6. Extract release notes from CHANGELOG.md (FIXED)
+      # 6. Extract release notes from CHANGELOG.md (FIXED OUTPUT)
       - name: Extract release notes from CHANGELOG
         id: changelog
         run: |
@@ -53,21 +53,16 @@ jobs:
           $inSection = $false
           $notes = @()
           foreach ($line in $lines) {
-              # Match both [vX.X.X] and vX.X.X formats
-              if ($line -match "## \[?$version\]?\s*-?\s*(.*)") { 
+              # Match [vX.X.X] format in your changelog
+              if ($line -match "## \[$version\]") { 
                   $inSection = $true
-                  # Add the title line if it has text after the version
-                  if ($matches[1] -and $matches[1].Trim()) {
-                      $notes += $matches[1].Trim()
-                  }
                   continue 
               }
               # Stop collecting when the next version header is found
               if ($inSection -and $line -match "^## \[") { 
-                  $inSection = $false 
                   break
               }
-              if ($inSection -and $line.Trim() -ne "") { 
+              if ($inSection -and $line.Trim() -ne "" -and $line -notmatch "^#") { 
                   $notes += $line.Trim() 
               }
           }
@@ -75,7 +70,7 @@ jobs:
               Write-Warning "No changelog section found for $version"
               $releaseNotes = "No release notes available."
           } else {
-              $releaseNotes = $notes -join "`n"
+              $releaseNotes = $notes -join "%0A"  # Use URL-encoded newlines
           }
           echo "body=$releaseNotes" >> $env:GITHUB_OUTPUT
 
@@ -86,6 +81,6 @@ jobs:
           tag_name: ${{ github.ref_name }}
           name: Release ${{ github.ref_name }}
           body: ${{ steps.changelog.outputs.body }}
-          files: ${{ steps.find-project.outputs.project_name }}/bin/Release/net472/${{ steps.find-project.outputs.project_name }}-${{ github.ref_name }}.zip
+          files: ${{ steps.find-project.outputs.project_name }}-${{ github.ref_name }}.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
